# jsonld-recursive

./: .gitignore  .npmignore  MAMBA_REMOVAL_SUMMARY.md  MANIFEST.in  README.md  ldr  ldr-server.js  package-lock.json  package.json  pyproject.toml  setup.py  test-context.py  test.ipynb  test_context.py
.github/workflows/: publish2pypi.yml
docs/: API.md  CONTEXT.md  GETTING_CONTEXTS_SUMMARY.md  MAPPINGS.md  NPM_READY.md  PUBLISHING.md
examples/: example.html  example_usage.py  get_context_example.py  test.ipynb
lib/: __init__.py  config.js  config.py  ldr-browser.js  ldr-core.js  ldr-server.js  ldr_client.py  package.json  test_install.py
lib/testdata/: context.jsonld  linked.jsonld  main.jsonld
