[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonld-recursive"
version = "1.0.0"
description = "Recursively expand and compact JSON-LD documents with caching and chained URL mappings"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Daniel Ellis", email = "wolfiex@users.noreply.github.com"}
]
keywords = [
    "jsonld",
    "json-ld",
    "linked-data",
    "semantic-web",
    "expand",
    "compact",
    "recursive",
    "rdf",
    "cache",
    "url-mapping",
    "chained-mappings",
    "wcrp",
    "cmip"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup"
]
dependencies = [
    "requests>=2.25.0",
    "urllib3>=1.26.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990"
]

[project.urls]
Homepage = "https://github.com/wolfiex/jsonld-recursive"
Documentation = "https://github.com/wolfiex/jsonld-recursive#readme"
Repository = "https://github.com/wolfiex/jsonld-recursive.git"
Issues = "https://github.com/wolfiex/jsonld-recursive/issues"

[tool.setuptools]
packages = ["jsonld_recursive"]

[tool.setuptools.package-dir]
jsonld_recursive = "lib"

[tool.setuptools.package-data]
jsonld_recursive = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
